# stellarator-synth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_synthetic_data.md  complete_pipeline_demo.py  demo_runner.py  language_model_trainer.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run_pipeline.py  setup.py  setup.sh  synthetic_data_generation_plan.md  synthetic_data_generator.py  text_data_converter.py
.github/workflows/: python-ci.yml
.openhands/: pre-commit.sh  setup.sh
data/example/: boundary_2.json  boundary_3.json  boundary_4.json  equilibrium_0.json  equilibrium_1.json  equilibrium_2.json  equilibrium_3.json  equilibrium_4.json  inputs.csv  metadata.json  outputs.csv
data/example/text/: all_samples.txt  completions.txt  prompts.txt
demo_synthetic_data/: failed_runs_batch_20.csv  failed_runs_batch_20.json  successful_runs_batch_20.csv  successful_runs_batch_20.json
demo_text_data/: dataset_metadata.json  train_combined.txt  train_natural.txt  train_qa_pairs.txt  train_structured.txt  val_combined.txt  val_natural.txt  val_qa_pairs.txt  val_structured.txt
src/: convert_to_text.py  example_data.py  generate_dataset.py  generate_sample_data.py  process_dataset.py  train_language_model.py  train_model.py
src/stellarator_synth/: __init__.py  cli.py  ml_surrogate_model.py
stellarator_synth/: __init__.py
tests/: __init__.py  test_example_data.py
