[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellarator-synth"
version = "0.1.0"
description = "Synthetic data generation for stellarator simulator ML surrogates"
readme = "README_synthetic_data.md"
authors = [
    {name = "OpenHands AI", email = "openhands@all-hands.dev"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "datasets>=2.0.0",
    "tokenizers>=0.12.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pydantic>=1.8.0",
    "jaxtyping>=0.2.0",
    "joblib>=1.1.0",
    "tqdm>=4.62.0",
    "pyDOE2>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-requests",
    "types-PyYAML",
]

[project.urls]
"Homepage" = "https://github.com/neubig/stellarator-synth"
"Bug Tracker" = "https://github.com/neubig/stellarator-synth/issues"

[project.scripts]
stellarator-synth-generate = "stellarator_synth.data_generator:main"
stellarator-synth-train = "stellarator_synth.ml_surrogate_model:main"
stellarator-synth-text = "stellarator_synth.text_data_converter:main"
stellarator-synth-lm = "stellarator_synth.language_model_trainer:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
known_third_party = ["numpy", "pandas", "tensorflow", "torch", "transformers", "datasets"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ERA", # eradicate
    "UP",  # pyupgrade
]

[tool.ruff.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
